...
    return Scaffold(
      backgroundColor: context.colors.background,
      appBar: AppBar(
        elevation: 0,
        backgroundColor: Colors.transparent,
        title: Text(
          'Settings',
          style: AppDesignSystem.heading3.copyWith(
            color: context.colors.onSurface,
          ),
        ),
      ),
      body: _isLoading
...
